servicemesh/04_timeouts/backend-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: training
  name: backend
spec:
  host: "*"
  subsets:
    - name: v1
      labels:
        version: 1.0.0


        # TODO why do I need the host in here???
