servicemesh/04_timeouts/backend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: training  
  name: backend
spec:
  hosts:
      - "*"
  gateways:
    - gateway
  http:
    - route:
      - destination:
          host: backend.training.svc.cluster.local
          subset: v1
        port:
          number: 8080
#      timeout: 2s
